# calliope-bots

./: README.md  meson.build
bots/: meson.build
bots/lastfmbot/: lastfmbot.py  lastfmbot.yaml.in  meson.build
bots/peelbot/: meson.build  peel-artists-rateyourmusic.json  peelbot.py  peelbot.yaml.in  scraper.py
bots/peelbot/data/: Complete John Peel - Rate Your Music.html  Complete John Peel [Page 10] - Rate Your Music.html  Complete John Peel [Page 11] - Rate Your Music.html  Complete John Peel [Page 12] - Rate Your Music.html  Complete John Peel [Page 13] - Rate Your Music.html  Complete John Peel [Page 14] - Rate Your Music.html  Complete John Peel [Page 15] - Rate Your Music.html  Complete John Peel [Page 2] - Rate Your Music.html  Complete John Peel [Page 3] - Rate Your Music.html  Complete John Peel [Page 4] - Rate Your Music.html  Complete John Peel [Page 6] - Rate Your Music.html  Complete John Peel [Page 7] - Rate Your Music.html  Complete John Peel [Page 9] - Rate Your Music.html
bots/peelbot/data/Complete John Peel [Page 11] - Rate Your Music_files/: min28.css
cli/: __main__.py  main.py.in  meson.build
